# explify

./: .gitignore  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-web.yml  release.yml
public/: robots.txt  sitemap.xml
public/legal/: privacy.md  terms.md
sidecar/: main.py  requirements.txt  server.py  sidecar.spec
sidecar/api/: account.py  admin.py  analysis_models.py  auth.py  billing.py  chat_routes.py  explain_models.py  history_models.py  letter_models.py  middleware.py  models.py  practice.py  routes.py  settings_store.py  template_models.py
sidecar/extraction/: __init__.py  demographics.py  detector.py  ocr_extractor.py  physician_extractor.py  pipeline.py  preprocessor.py  reference_range_extractor.py  table_extractor.py  text_extractor.py  text_table_parser.py  vision_ocr.py
sidecar/llm/: __init__.py  client.py  prompt_engine.py  response_parser.py  retry.py  schemas.py
sidecar/phi/: scrubber.py
sidecar/report_gen/: __init__.py  pdf_renderer.py
sidecar/storage/: database.py  keychain.py  pg_database.py
sidecar/test_types/: __init__.py  _registry_data.py  base.py  generic.py  llm_detector.py  registry.py
sidecar/tests/: __init__.py  test_cardiac_mri_handler.py  test_cta_coronary_handler.py  (+18 more)
sql/: rds_migration.sql  usage_log_migration.sql
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore  sidecar-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
(+137 files in other folders)
