[package]
name = "verba"
version = "0.1.0"
description = "Verba Desktop Application"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-shell = "2"
